added updateAccount entrypoint
